@@ -68,6 +68,7 @@
     * Optimized listdir and listdirinfo in SFTPFS
     * Made memoryfs work with threads
     * Added copyfile_non_atomic and movefile_non_atomic for improved performance of multi-threaded copies
+    * Added a concept of a writeable FS to MultiFS
     * Added ilistdir() and ilistdirinfo() methods, which are generator-based
       variants of listdir() and listdirinfo().
     * Removed obsolute module fs.objectree; use fs.path.PathMap instead.
